MOBILE works for 1.5! just have to do a tiny fix on the relational because they're too large, I am about to delve into the javascript, FORGIVE ME

--- a/src/main/webapp/WEB-INF/css/webservice1_5.css
+++ b/src/main/webapp/WEB-INF/css/webservice1_5.css
@@ -91,7 +91,7 @@ img	{
 }
 	
 .row {
-    display: table;
+    display: flex;
 }
 
 [class*="col-"] {
@@ -101,7 +101,7 @@ img	{
 }
 
 .listItem{
-	width:100%;
+	width:50%;
 	display:inline-block;
 }
 .listImage{
@@ -116,19 +116,26 @@ img	{
 
 /* Jesus help me  */
 
-#searchbar {
+/* #searchbar {
 	padding-left: 20px;
+	margin-left: auto;
+	margin-right: auto;
+
 }
 
 #searchResults {
 	padding-left: 20px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .form-control {
-	min-width: 20%;
-	max-width: 30%;
-}
+	min-width: 30%;
+	max-width: 50%;
+} */
 
 #display {
 	text-align: center;
 }
+
+/* trying to make it mobile... */
